# hops-gpu-management-impl-nvidia

./: LICENSE_OF_DEPENDENCIES.md  README.md  deploy-server.sh  pom.xml  pom.xml.versionsBackup
src/: CMakeLists.txt
src/main/java/io/hops/management/nvidia/: NvidiaManagementLibrary.java  dojavah.sh
src/main/native/gpu/include/: NvidiaManagementLibrary.h
src/main/native/gpu/src/: nvml.c
